--- a/css/html.css
+++ b/css/html.css
@@ -233,14 +233,20 @@ img.maxSize {
     border: 1px solid #000000;
 }
 
-
 img.floatRight {
     margin: 5px 0px 10px 15px;
 }
 
 img.floatLeft {
     margin: 5px 15px 10px 0px;
-    /*border: 1px solid #0000ff;*/
+}
+
+img.t0 {
+    float: left;
+    margin: 5px 15px 10px 0px;
+    width: 75px;
+    height: 75px;
+    border: 0px;
 }
 
 a img {  
@@ -248,6 +254,6 @@ a img {
 }
 
 a:hover img {  
-    border: 4px solid #BAAAA1;
+    border: 0px solid #BAAAA1;
 }
 
